# AbstractMusic-compose

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/debug/: output-metadata.json
app/src/androidTest/java/com/hua/abstractmusic/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hua/abstractmusic/: PlayerApplication.kt
app/src/main/res/drawable/: ic_album.xml  ic_artist.xml  ic_controller_list.xml  ic_controller_pause.xml  ic_controller_play.xml  ic_delete_all.xml  ic_delete_item.xml  ic_error.xml  ic_hello_net.xml  ic_hello_save.xml  ic_hello_service.xml  ic_launcher_foreground.xml  ic_level_button.xml  ic_line.xml  ic_list_remove.xml  ic_login_eye_off.xml  ic_login_eye_on.xml  ic_login_warning.xml  ic_mode_order_play.xml  ic_mode_play.xml  ic_mode_repeat_all.xml  ic_mode_repeat_off.xml  ic_mode_repeat_one.xml  ic_mode_shuffle.xml  ic_more.xml  ic_music_icon.xml  ic_music_launcher.xml  ic_network_error.xml  ic_next.xml  ic_pause.xml  ic_person_icon.xml  ic_play.xml  ic_play_next.xml  ic_play_prev.xml  ic_playlist.xml  ic_playlist_icon.xml  ic_search.xml
app/src/main/res/layout/: widget_loading.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: music_controller.xml
app/src/test/java/com/hua/abstractmusic/: ExampleUnitTest.kt
blur/: build.gradle
blur/src/main/: AndroidManifest.xml
blur/src/main/cpp/: CMakeLists.txt  blur.cpp
buildSrc/src/main/kotlin/: Libs.kt  Version.kt
gradle/wrapper/: gradle-wrapper.properties
material/: build.gradle
model/: build.gradle.kts  proguard-rules.pro
model/src/main/: AndroidManifest.xml
network/: build.gradle.kts
network/src/main/res/values/: strings.xml
service/: build.gradle.kts
service/src/main/: AndroidManifest.xml
service/src/main/res/drawable/: ic_play_pause.xml  ic_play_play.xml
service/src/main/res/values/: strings.xml
taglib/: build.gradle
taglib/src/main/: AndroidManifest.xml
taglib/src/main/cpp/: CMakeLists.txt  taglib.cpp
(+279 files in other folders)
